--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contrarian Selling - The Courage to Sell Differently</title>
     <style>
+        @import url(https://db.onlinewebfonts.com/c/1f48488feaf5817c5af4d8688e9e6737?family=Veneer);
+        
         /* Reset and Base Styles */
         * {
             margin: 0;
@@ -27,6 +29,24 @@
             color: var(--color-dark-gray);
             line-height: 1.6;
             overflow-x: hidden;
+        }
+
+        /* All headings use Veneer font */
+        h1, h2, h3, h4, h5, h6,
+        .hero-title,
+        .section-title,
+        .selling-differently-title,
+        .inside-program-title,
+        .colonial-life-title,
+        .module-title,
+        .benefit-title,
+        .focus-title,
+        .faq-question,
+        .program-title,
+        .contact-section .section-title,
+        .footer-logo-title {
+            font-family: 'Veneer', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-weight: 300;
         }
 
         .container {
@@ -127,19 +147,19 @@
         .course-tag {
             display: inline-block;
             background-color: rgba(255, 107, 53, 0.2);
-            color: var(--color-dark-gray);
-            padding: 6px 12px;
+            color: var(--color-orange);
+            padding: 4px 10px;
             border-radius: 4px;
             font-size: 12px;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
-            margin-bottom: 20px;
+            margin-bottom: 12px;
         }
 
         .hero-title {
             font-size: 48px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             line-height: 1.2;
             margin-bottom: 20px;
@@ -151,6 +171,10 @@
 
         .hero-title-line1 {
             display: block;
+        }
+
+        .hero-title-brand {
+            font-size: 4.75rem;
         }
 
         .hero-title-line2 {
@@ -171,7 +195,7 @@
             font-weight: 600;
             font-size: 18px;
             display: inline-block;
-            margin-bottom: 30px;
+            margin-top: 30px;
         }
 
         .cta-link:hover {
@@ -198,9 +222,11 @@
 
         .stat-number {
             font-size: 36px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 5px;
+            font-family: 'Veneer', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            line-height: 1.25em;
         }
 
         .stat-label {
@@ -216,17 +242,18 @@
         }
 
         .section-label {
+            font-family: 'Veneer', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-weight: 300;
+            font-size:3rem;
             color: var(--color-orange);
-            font-size: 16px;
-            font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 2px;
-            margin-bottom: 20px;
+            margin-bottom: 0px;
         }
 
         .section-title {
-            font-size: 42px;
-            font-weight: bold;
+            font-size: 4.25rem;
+            font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 25px;
             line-height: 1.2;
@@ -262,7 +289,7 @@
 
         .selling-differently-title {
             font-size: 42px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             line-height: 1.2;
             margin-bottom: 20px;
@@ -339,7 +366,7 @@
 
         .benefit-title {
             font-size: 18px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 6px;
         }
@@ -403,7 +430,7 @@
 
         .inside-program-title {
             font-size: 42px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             line-height: 1.2;
             margin-bottom: 20px;
@@ -455,7 +482,7 @@
 
         .focus-title {
             font-size: 18px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 6px;
         }
@@ -506,7 +533,7 @@
 
         .colonial-life-title {
             font-size: 42px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-black);
             text-transform: uppercase;
             line-height: 1.2;
@@ -534,7 +561,7 @@
 
         .program-title {
             font-size: 24px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             text-transform: uppercase;
             margin-bottom: 20px;
@@ -742,7 +769,7 @@
 
         .module-title {
             font-size: 20px;
-            font-weight: bold;
+            font-weight: 300;
             text-transform: uppercase;
             margin-bottom: 15px;
             color: var(--color-dark-gray);
@@ -850,7 +877,7 @@
 
         .faq-question {
             font-size: 22px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 15px;
             text-transform: uppercase;
@@ -1023,7 +1050,7 @@
 
         .footer-logo-title {
             font-size: 24px;
-            font-weight: bold;
+            font-weight: 300;
             color: var(--color-white);
             letter-spacing: 1px;
         }
@@ -1368,7 +1395,7 @@
             <div class="hero-content">
                 <span class="course-tag">COURSE</span>
                 <h1 class="hero-title">
-                    <span class="hero-title-line1">CONTRARIAN SELLING:</span>
+                    <span class="hero-title-line1"><span class="hero-title-brand">CONTRARIAN SELLING:</span></span>
                     <span class="hero-title-line2">THE COURAGE TO SELL DIFFERENTLY</span>
                 </h1>
                 <p class="hero-description">A sales training program for people who want to perform better by thinking clearly and approaching sales conversations with confidence and judgment.</p>
