--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
             --color-dark-gray: #333333;
             --color-light-gray: #666666;
             --font-primary: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            
+            /* Fluid Typography System */
+            --fluid-hero-xl: clamp(2.5rem, 5vw + 1rem, 4.75rem); /* Hero brand text */
+            --fluid-hero-lg: clamp(2rem, 4vw + 0.5rem, 3rem); /* Hero title */
+            --fluid-section-xl: clamp(2rem, 3.5vw + 0.5rem, 4.25rem); /* Section titles */
+            --fluid-section-lg: clamp(1.75rem, 3vw + 0.5rem, 3rem); /* Large section labels */
+            --fluid-heading-lg: clamp(1.5rem, 2.5vw + 0.5rem, 2.5rem); /* Large headings */
+            --fluid-heading-md: clamp(1.25rem, 2vw + 0.5rem, 2rem); /* Medium headings */
+            --fluid-heading-sm: clamp(1rem, 1.5vw + 0.5rem, 1.5rem); /* Small headings */
+            --fluid-body-lg: clamp(1rem, 1.2vw + 0.5rem, 1.125rem); /* Large body (18px) */
+            --fluid-body: clamp(0.875rem, 1vw + 0.5rem, 1rem); /* Body text (16px) */
+            --fluid-body-sm: clamp(0.75rem, 0.8vw + 0.5rem, 0.875rem); /* Small text (14px) */
+            --fluid-body-xs: clamp(0.6875rem, 0.6vw + 0.5rem, 0.75rem); /* Extra small (12px) */
+            --fluid-stat-lg: clamp(2rem, 4vw + 1rem, 4rem); /* Large stats (80px) */
         }
 
         body {
@@ -75,7 +89,7 @@
         .logo {
             color: var(--color-white);
             font-weight: bold;
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             letter-spacing: 1px;
         }
 
@@ -84,7 +98,7 @@
         }
 
         .byline {
-            font-size: 12px;
+            font-size: var(--fluid-body-xs);
             font-weight: normal;
             color: #999;
             margin-left: 10px;
@@ -94,7 +108,7 @@
             background: none;
             border: none;
             color: var(--color-white);
-            font-size: 24px;
+            font-size: var(--fluid-heading-md);
             cursor: pointer;
             display: none;
         }
@@ -107,7 +121,7 @@
             border-radius: 4px;
             font-weight: bold;
             cursor: pointer;
-            font-size: 14px;
+            font-size: var(--fluid-body-sm);
         }
 
         /* Hero Section */
@@ -115,9 +129,8 @@
             background-color: var(--color-beige);
             background-image: url('img/Steve-Heroux-hero-bg.jpg');
             background-size: cover;
-            background-position: right center;
+            background-position: bottom center;
             background-repeat: no-repeat;
-            padding: 80px 20px;
             position: relative;
             min-height: 600px;
         }
@@ -138,6 +151,7 @@
             margin: 0 auto;
             position: relative;
             z-index: 2;
+            padding: 80px 20px;
         }
 
         .hero-content {
@@ -158,7 +172,7 @@
         }
 
         .hero-title {
-            font-size: 48px;
+            font-size: var(--fluid-hero-lg);
             font-weight: 300;
             color: var(--color-dark-gray);
             line-height: 1.2;
@@ -174,7 +188,7 @@
         }
 
         .hero-title-brand {
-            font-size: 4.75rem;
+            font-size: var(--fluid-hero-xl);
         }
 
         .hero-title-line2 {
@@ -182,7 +196,7 @@
         }
 
         .hero-description {
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             color: var(--color-dark-gray);
             margin-bottom: 30px;
             line-height: 1.7;
@@ -193,7 +207,7 @@
             text-decoration: underline;
             text-underline-offset: 3px;
             font-weight: 600;
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             display: inline-block;
             margin-top: 30px;
         }
@@ -221,7 +235,7 @@
         }
 
         .stat-number {
-            font-size: 36px;
+            font-size: var(--fluid-stat-lg);
             font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 5px;
@@ -230,7 +244,7 @@
         }
 
         .stat-label {
-            font-size: 14px;
+            font-size: var(--fluid-body-sm);
             color: var(--color-dark-gray);
         }
 
@@ -244,7 +258,7 @@
         .section-label {
             font-family: 'Veneer', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             font-weight: 300;
-            font-size:3rem;
+            font-size: var(--fluid-section-lg);
             color: var(--color-orange);
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -252,7 +266,7 @@
         }
 
         .section-title {
-            font-size: 4.25rem;
+            font-size: var(--fluid-section-xl);
             font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 25px;
@@ -261,7 +275,7 @@
         }
 
         .section-text {
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             color: var(--color-light-gray);
             line-height: 1.7;
             max-width: 800px;
@@ -288,7 +302,7 @@
         }
 
         .selling-differently-title {
-            font-size: 42px;
+            font-size: var(--fluid-section-xl);
             font-weight: 300;
             color: var(--color-dark-gray);
             line-height: 1.2;
@@ -307,7 +321,7 @@
         }
 
         .section-subtitle {
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             color: var(--color-dark-gray);
             margin-bottom: 30px;
             font-weight: normal;
@@ -365,14 +379,14 @@
         }
 
         .benefit-title {
-            font-size: 18px;
+            font-size: var(--fluid-heading-sm);
             font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 6px;
         }
 
         .benefit-text {
-            font-size: 15px;
+            font-size: var(--fluid-body);
             color: var(--color-light-gray);
             line-height: 1.6;
         }
@@ -385,8 +399,8 @@
         }
 
         .statement-text {
-            font-size: 36px;
-            font-weight: bold;
+            font-size: var(--fluid-heading-lg);
+            font-weight: 300;
             color: var(--color-white);
             text-transform: uppercase;
             line-height: 1.3;
@@ -429,7 +443,7 @@
         }
 
         .inside-program-title {
-            font-size: 42px;
+            font-size: var(--fluid-section-xl);
             font-weight: 300;
             color: var(--color-dark-gray);
             line-height: 1.2;
@@ -438,15 +452,15 @@
         }
 
         .inside-program-text {
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             color: var(--color-dark-gray);
             line-height: 1.7;
             margin-bottom: 25px;
         }
 
         .inside-program-subtitle {
-            font-size: 18px;
-            font-weight: bold;
+            font-size: var(--fluid-body-lg);
+            font-weight: 300;
             color: var(--color-dark-gray);
             text-transform: uppercase;
             margin-bottom: 25px;
@@ -481,14 +495,14 @@
         }
 
         .focus-title {
-            font-size: 18px;
+            font-size: var(--fluid-heading-sm);
             font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 6px;
         }
 
         .focus-text {
-            font-size: 15px;
+            font-size: var(--fluid-body);
             color: var(--color-dark-gray);
             line-height: 1.6;
         }
@@ -501,8 +515,8 @@
         }
 
         .philosophy-text {
-            font-size: 36px;
-            font-weight: bold;
+            font-size: var(--fluid-heading-lg);
+            font-weight: 300;
             color: var(--color-white);
             text-transform: uppercase;
             line-height: 1.3;
@@ -532,7 +546,7 @@
         }
 
         .colonial-life-title {
-            font-size: 42px;
+            font-size: var(--fluid-section-xl);
             font-weight: 300;
             color: var(--color-black);
             text-transform: uppercase;
@@ -542,7 +556,7 @@
         }
 
         .colonial-life-text {
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             color: var(--color-dark-gray);
             line-height: 1.7;
             margin-bottom: 20px;
@@ -560,7 +574,7 @@
         }
 
         .program-title {
-            font-size: 24px;
+            font-size: var(--fluid-heading-md);
             font-weight: 300;
             color: var(--color-dark-gray);
             text-transform: uppercase;
@@ -575,20 +589,20 @@
         }
 
         .current-price {
-            font-size: 48px;
-            font-weight: bold;
+            font-size: var(--fluid-hero-lg);
+            font-weight: 300;
             color: var(--color-dark-gray);
         }
 
         .original-price {
-            font-size: 48px;
-            font-weight: bold;
+            font-size: var(--fluid-hero-lg);
+            font-weight: 300;
             color: var(--color-light-gray);
             text-decoration: line-through;
         }
 
         .payment-option {
-            font-size: 14px;
+            font-size: var(--fluid-body-sm);
             color: var(--color-light-gray);
             margin-bottom: 25px;
         }
@@ -601,7 +615,7 @@
             padding: 15px 30px;
             border-radius: 4px;
             font-weight: 600;
-            font-size: 16px;
+            font-size: var(--fluid-body);
             cursor: pointer;
             margin-bottom: 30px;
             transition: background-color 0.3s;
@@ -620,12 +634,12 @@
             gap: 12px;
             margin-bottom: 15px;
             align-items: flex-start;
-            font-size: 16px;
+            font-size: var(--fluid-body);
             color: var(--color-dark-gray);
         }
 
         .feature-item .checkmark {
-            font-size: 20px;
+            font-size: var(--fluid-heading-sm);
             margin-top: 2px;
         }
 
@@ -768,7 +782,7 @@
         }
 
         .module-title {
-            font-size: 20px;
+            font-size: var(--fluid-heading-sm);
             font-weight: 300;
             text-transform: uppercase;
             margin-bottom: 15px;
@@ -777,14 +791,14 @@
         }
 
         .module-description {
-            font-size: 16px;
+            font-size: var(--fluid-body);
             color: var(--color-dark-gray);
             line-height: 1.6;
         }
 
         .modules-footer {
             text-align: center;
-            font-size: 16px;
+            font-size: var(--fluid-body);
             color: var(--color-white);
             opacity: 0.8;
             line-height: 1.6;
@@ -822,8 +836,8 @@
         }
 
         .badge-text-top {
-            font-size: 14px;
-            font-weight: bold;
+            font-size: var(--fluid-body-sm);
+            font-weight: 300;
             color: var(--color-white);
             text-transform: uppercase;
             position: absolute;
@@ -831,14 +845,14 @@
         }
 
         .badge-number {
-            font-size: 64px;
-            font-weight: bold;
+            font-size: clamp(3rem, 6vw + 1rem, 4rem);
+            font-weight: 300;
             color: var(--color-white);
         }
 
         .badge-text-bottom {
-            font-size: 14px;
-            font-weight: bold;
+            font-size: var(--fluid-body-sm);
+            font-weight: 300;
             color: var(--color-white);
             text-transform: uppercase;
             position: absolute;
@@ -852,7 +866,7 @@
 
         .guarantee-text .section-text {
             color: var(--color-white);
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
         }
 
         /* FAQs Section */
@@ -876,7 +890,7 @@
         }
 
         .faq-question {
-            font-size: 22px;
+            font-size: var(--fluid-heading-md);
             font-weight: 300;
             color: var(--color-dark-gray);
             margin-bottom: 15px;
@@ -884,7 +898,7 @@
         }
 
         .faq-answer {
-            font-size: 16px;
+            font-size: var(--fluid-body);
             color: var(--color-light-gray);
             line-height: 1.7;
         }
@@ -906,8 +920,8 @@
             color: var(--color-black);
             text-align: left;
             margin-bottom: 40px;
-            font-size: 42px;
-            font-weight: bold;
+            font-size: var(--fluid-section-xl);
+            font-weight: 300;
             text-transform: uppercase;
             letter-spacing: -0.5px;
         }
@@ -940,7 +954,7 @@
         }
 
         .form-group label {
-            font-size: 14px;
+            font-size: var(--fluid-body-sm);
             font-weight: 600;
             color: var(--color-black);
             margin-bottom: 4px;
@@ -955,7 +969,7 @@
             border: 1px solid #D0D0D0;
             background-color: var(--color-white);
             color: var(--color-dark-gray);
-            font-size: 16px;
+            font-size: var(--fluid-body);
             font-family: var(--font-primary);
             border-radius: 4px;
             transition: border-color 0.3s;
@@ -987,7 +1001,7 @@
         }
 
         .form-checkbox-group label {
-            font-size: 14px;
+            font-size: var(--fluid-body-sm);
             font-weight: normal;
             color: var(--color-dark-gray);
             cursor: pointer;
@@ -1010,7 +1024,7 @@
             padding: 15px 30px;
             border-radius: 4px;
             font-weight: normal;
-            font-size: 16px;
+            font-size: var(--fluid-body);
             cursor: pointer;
             transition: background-color 0.3s;
             margin-top: 10px;
@@ -1049,7 +1063,7 @@
         }
 
         .footer-logo-title {
-            font-size: 24px;
+            font-size: var(--fluid-heading-md);
             font-weight: 300;
             color: var(--color-white);
             letter-spacing: 1px;
@@ -1061,7 +1075,7 @@
 
         .footer-logo-byline {
             font-family: 'Brush Script MT', 'Lucida Handwriting', 'Apple Chancery', cursive;
-            font-size: 18px;
+            font-size: var(--fluid-body-lg);
             color: var(--color-white);
             font-style: italic;
         }
@@ -1073,7 +1087,7 @@
             padding: 12px 24px;
             border-radius: 4px;
             font-weight: 600;
-            font-size: 16px;
+            font-size: var(--fluid-body);
             cursor: pointer;
             transition: background-color 0.3s;
             white-space: nowrap;
@@ -1099,7 +1113,7 @@
         }
 
         .footer-about {
-            font-size: 16px;
+            font-size: var(--fluid-body);
             color: var(--color-white);
         }
 
@@ -1112,7 +1126,7 @@
         .footer-website-link {
             color: var(--color-white);
             text-decoration: none;
-            font-size: 16px;
+            font-size: var(--fluid-body);
             transition: color 0.3s;
         }
 
@@ -1129,7 +1143,7 @@
         }
 
         .footer-copyright {
-            font-size: 14px;
+            font-size: var(--fluid-body-sm);
             color: rgba(255, 255, 255, 0.8);
         }
 
@@ -1142,7 +1156,7 @@
         .footer-legal-link {
             color: var(--color-white);
             text-decoration: none;
-            font-size: 14px;
+            font-size: var(--fluid-body-sm);
             transition: color 0.3s;
         }
 
